--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
-    <link rel="stylesheet" href="style.css">
   <link rel="icon" href="portfolio_img/favicon.png">
     <link rel="stylesheet" href="css_icon/all.min.css">
     <link rel="stylesheet" href="css_icon/fontawesome.min.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./bootstrap-5.3.2-dist/css/bootstrap.min.css">
 </head>
 <body>
@@ -297,7 +297,7 @@
 <!-- work-expertise-start -->
 
   
-<section class="main col-lg-12 col-sm-12 col-md-6 col-xl-12 col-xxl-12 py-5">
+<!-- <section class="main col-lg-12 col-sm-12 col-md-6 col-xl-12 col-xxl-12 py-5">
   <div class="container-lg  py-5 flex-container">
    
     <div class="row ">    
@@ -323,7 +323,7 @@
     </div>
     </div>
   </div>
-</section>
+</section> -->
 <!-- work-expertise-end -->
 
       <!-- ===========work portfolio area start ===========  -->
