section area responcive

--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
       <div class="container-lg  py-5 flex-container shadow-lg p-5">
         <div class="row py-5">
           <div class="col-lg-4 shadow  p-5 rounded">
-            <p class="text-muted mb-2 mt-3 text-sm"><a href="#" class="text-black">Email: </a> queue@gmail.com</p>
+            <p class="text-muted mb-2 mt-3 text-sm"><a href="#" class="text-black">Email: </a> afrin12490@gmail.com</p>
                           <p class="text-muted mb-2 text-sm"><a href="#" class="text-black">Languages: </a> English</p>
-                          <p class="text-muted mb-0 text-sm"><a href="#" class="text-black">Nationality: </a> Australian</p>
+                          <p class="text-muted mb-0 text-sm"><a href="#" class="text-black">Nationality: </a> Bangladesh</p>
           </div>
           
           <div class="col-lg-8 shadow right">
