--- a/index.html
+++ b/index.html
@@ -61,22 +61,7 @@
           </div>
         </div>
       </nav>
-       <!-- <nav class="shadow-sm">
-        <input type="checkbox" id="check">
-        <label for="check" class="checkbtn">
-            <i class="fa-solid fa-bars"></i>
-        </label>
-        <label class="logo">Af<span>r</span>in</label>
-        <ul>
-            <li><a class="active" href="#">HOME</a></li>
-            <li><a href="#">SERVICES</a></li>
-            <li><a href="#">RESUME</a></li>
-            <li><a href="#">PROJECTS</a></li>
-            <li><a href="#">BLOG</a></li>
-            <li><a href="#">CONTACT</a></li>
-            <li><a href="#">PAGES</a></li>
-            </ul>
-    </nav> -->
+   
      
 <!-- navigation-area end -->
 
@@ -647,16 +632,16 @@
               <div class="col-lg-12">
                 <form>
                   <div class="mb-3 input_frm">
-                    <input type="text" class="form-control" id="fistName" aria-describedby="textHelp" placeholder="Frist Name:" required>
+                    <input type="text" class="form-control p-2" id="fistName" aria-describedby="textHelp" placeholder="Frist Name:" required>
+                    </div>                
+                    <div class="mb-3 input_frm">
+                    <input type="email" class="form-control p-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your email:" required>
                     </div>
                     <div class="mb-3 input_frm">
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your email:" required>
-                    </div>
-                    <div class="mb-3 input_frm">
-                     <input type="text" class="form-control" id="exampleInputText" aria-describedby="textHelp" placeholder="Your Subject:" required>
+                     <input type="text" class="form-control p-2" id="subject" aria-describedby="textHelp" placeholder="Your Subject:" required>
                     </div>
                     
-                      <textarea class="form-control m-auto" id="comments" placeholder="Leave a comment here" required style="height: 100px;width: 50%;"></textarea>              
+                      <textarea class="form-control m-auto p-2" id="comments" placeholder="Your Message" required style="height: 100px;width: 50%;"></textarea>              
                </div>
                <button type="submit" class="btn btn-primary mt-3 p-2 m-auto fw-bolder" style="width: 10%; ">Submit</button>
                 </form>
@@ -700,6 +685,6 @@
 
 <script src="./bootstrap-5.3.2-dist/js/bootstrap.bundle.js"></script>
 <script src="./bootstrap-5.3.2-dist/js/bootstrap.min.js"></script>
-<script src="portfolio.js"></script>
+<script src="javascript/portfolio.js"></script>
 </body>
 </html>
