contact form done

--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                      <input type="text" class="form-control p-2" id="subject" aria-describedby="textHelp" placeholder="Your Subject:" required>
                     </div>
                     
-                      <textarea class="form-control m-auto p-2" id="comments" placeholder="Your Message" required style="height: 100px;width: 50%;"></textarea>              
+                      <textarea class="form-control m-auto p-2" id="message" placeholder="Your Message" required style="height: 100px;width: 50%;"></textarea>              
                </div>
                <button type="submit" class="btn btn-primary mt-3 p-2 m-auto fw-bolder" style="width: 10%; ">Submit</button>
                 </form>
