--- a/index.html
+++ b/index.html
@@ -317,8 +317,11 @@
         <div class="container text-center py-5">
            <h1 class="text-center">My Work & Portfolio</h1>
       <p class="text-center pb-5">Obviously I'm a Web Designer. Experienced with all stages of the development<br> cycle for dynamic web projects..</p>
-          
-          <div class="row pt-3">
+
+          <div id="project" class="row row-cols-3">
+
+            
+          <!-- <div class="row pt-3">
             <div class="col-lg-4">
               <div class="item">
               <img src="portfolio_img/1.jpg" class="img-fluid" alt="">
@@ -359,7 +362,8 @@
             </div>
               </div> 
               <button type="button" class="btn btn-primary click">See More <i class="fa-solid fa-greater-than"></i></button> 
-          </div>
+          </div> -->
+        </div>
       </section>
        <!-- ===========work portfolio End ===========  -->
 
