--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   </ul>
                 </li>
               </ul>
-              <button type="button" class="btn btn-primary">Download Resume</button>
+              <button type="button" class="btn btn-primary"><a href="https://i.ibb.co/X8w0pjS/410380332-339579332115742-1378248341548169552-n-1.jpg" class="text-decoration-none text-white" target="_blank">Download Resume</a></button>
             </div>
           </div>
         </div>
@@ -74,7 +74,7 @@
       <h3 class="pt-5 pb-2 mt-5 fs-1">Here I'am Afrin</h3>
       <p class="pb-2">Obviously I'm a Web Designer. Web Developer with over 3 years of experience. <br>Experienced with all stages of the development</p>
       <button type="button" class="btn btn-primary btn-lg px-5 mb-2">Hire Me</button>
-      <button type="button" class="btn download-btn border border-primary btn-lg px-5 text-primary mb-2">Download CV <i class="fa-solid fa-download"></i></button>
+      <button type="button" class="btn download-btn border border-primary btn-lg px-5 text-primary mb-2"><a href="https://i.ibb.co/X8w0pjS/410380332-339579332115742-1378248341548169552-n-1.jpg" class="text-decoration-none" target="_blank">Download CV</a> <i class="fa-solid fa-download"></i></button>
       </div>
       <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 bg-light
       ">
